@@ -4,13 +4,13 @@
 
 --- a/xterm.man
 +++ b/xterm.man
-@@ -2675,8 +2675,9 @@ This is a comma-separated list of names,
+@@ -2743,8 +2743,9 @@ This is a comma-separated list of names,
  from \fIdtterm\fP the operation number).
  The default value is
- .RS
+ .NS
 -20,21,SetXprop,SetSelection
 +1,2,3,4,5,6,7,8,9,11,13,14,18,19,20,21,GetSelection,SetSelection,SetWinLines,SetXprop
- .RE
+ .NE
 +(i.e. no operations are allowed).
  .IP
  The names are listed below.
